--- a/config/polybar/modules/info.ini
+++ b/config/polybar/modules/info.ini
@@ -94,7 +94,7 @@ label-mounted-foreground = ${colors.fg-3}
 
 [module/cpu]
 type = internal/cpu
-interval = 2
+interval = 1
 format-prefix = " "
 format-prefix-underline = ${colors.cyan-2}
 format-prefix-foreground = ${colors.cyan-2}
@@ -107,16 +107,34 @@ label-foreground = ${colors.fg-3}
 
 [module/memory]
 type = internal/memory
-interval = 2
+interval = 1
+
 ; format-prefix = " "
 format-prefix = " "
 format-prefix-underline = ${colors.cyan-1}
 format-prefix-background = ${colors.bg-1}
 format-prefix-foreground = ${colors.cyan-1}
+
 format-background = ${colors.bg-1}
+
 label = %percentage_used:2%%
+; label = %free%
 label-underline = ${colors.cyan-1}
 label-foreground = ${colors.fg-3}
+
+;---Warn
+warn-percentage = 90
+label-warn = %percentage_used:2%% (%free% free)
+format-warn = <label-warn>
+
+label-warn-background = ${colors.alert}
+label-warn-underline = ${colors.cyan-1}
+label-warn-foreground = ${colors.fg-3}
+
+format-warn-prefix = " "
+format-warn-prefix-underline = ${colors.cyan-1}
+format-warn-prefix-background = ${colors.alert}
+format-warn-prefix-foreground = ${colors.cyan-1}
  
 
 [module/temperature]
