--- a/config/i3wm/config
+++ b/config/i3wm/config
@@ -4,7 +4,7 @@
 #
 # Last modification : 2023.12.30
 # Author            : Lasercata
-# Version           : v1.9.6
+# Version           : v1.9.7
 #
 #--------------------------------
 
@@ -214,6 +214,8 @@ bindsym XF86AudioPlay exec --no-startup-id cmus-remote -u
 bindsym XF86AudioPause exec --no-startup-id cmus-remote -u
 bindsym XF86AudioNext exec --no-startup-id cmus-remote -k +5
 bindsym XF86AudioPrev exec --no-startup-id cmus-remote -k -5
+
+bindsym $mod+p exec --no-startup-id "playerctl play-pause"
 
 #-Touchpad
 bindsym XF86TouchpadToggle exec --no-startup-id ~/.config/i3/script/toggle_touchpad_libinput.sh
