--- a/config/polybar/modules/info.ini
+++ b/config/polybar/modules/info.ini
@@ -28,7 +28,7 @@ label-background = ${colors.bg-1}
 label-foreground = ${colors.fg-3}
 ; time = %Y-%m-%d
 time = %d-%m-%Y
-label = %time%
+label = %{A1:source ~/.config/i3/scripts/set_env_vars.sh; ~/.config/polybar/scripts/popup_calendar.sh --popup &:}%time%%{A}
 
 
 [module/time]
