polybar: adding a useless bluetooth script
That is not used obviously

--- a/config/polybar/modules/system.ini
+++ b/config/polybar/modules/system.ini
@@ -161,6 +161,8 @@ label-disconnected = %ifname% disconnected
 [module/bluetooth]
 type = custom/script
 exec = $HOME/.config/polybar/scripts/bluetooth.sh
+; exec = $HOME/.config/polybar/scripts/bluetooth_v2.sh
+; tail = true
 interval = 1
 click-left = exec bluetooth toggle
 ; format-padding = 1
