Update neofetch config

--- a/config/neofetch/config.conf
+++ b/config/neofetch/config.conf
@@ -11,9 +11,9 @@
 
 #-------------------------
 #
-# last modif : 2023.06.01
+# last modif : 2024.02.01
 # author     :
-# version    : v1.1
+# version    : v1.1.1
 #
 #-------------------------
 
@@ -21,25 +21,25 @@ print_info() {
     prin "┌──────────────────\n Hardware Information \n──────────────────┐"
     info " ​ ​   model " model
     info " ​ ​  cpu " cpu
-    info " ​ ​ ﬙ gpu " gpu
+    info " ​ ​ ﬙ gpu\t " gpu
     info " ​ ​  disk " disk
     info " ​ ​ 塞memory " memory
     info " ​ ​  resolution\b" resolution
     info " ​ ​ 󱈑 battery " battery
     prin "├──────────────────\n Software Information \n──────────────────┤"
     # info " ​ ​  users " users
-    info " ​ ​  distro " distro
+    info " ​ ​  distro " distro
     # Just get your distro's logo off nerdfonts.com
     # , 
     info " ​ ​  kernel " kernel
-    info " ​ ​  de " de
-    info " ​ ​  wm " wm
+    info " ​ ​  de\t " de
+    info " ​ ​  wm\t " wm
     info " ​ ​  shell " shell
     info " ​ ​  term " term
     info " ​ ​  term_font " term_font
     info " ​ ​ │  font " font
     info " ​ ​  theme " theme
-    # info " ​ ​  icons " icons
+    info " ​ ​  icons " icons
     info " ​ ​ 󰅐 uptime " uptime
     info " ​ ​  locale " locale  # This only works on glibc systems.
     # info " ​ ​   " gpu_driver  # Linux/macOS only
