polybar: adding eth module for phone tethering
Still need to reload every time the phone is plugged (would be solved with https://github.com/polybar/polybar/pull/2980)

--- a/config/polybar/colors.ini
+++ b/config/polybar/colors.ini
@@ -41,6 +41,8 @@ purple-1 = #8b85e0
 purple-2 = #928be2
 purple-3 = #978fec
 
+off = #66ffffff
+
 ;Defaults
 background = #2e3436
 background-alt = #444
