--- a/config/polybar/modules/misc.ini
+++ b/config/polybar/modules/misc.ini
@@ -1,49 +1,49 @@
 [module/slash]
 type = custom/text
-content = /
-content-background = ${colors.bg-1}
-content-foreground = ${colors.bg-3}
+format = /
+format-background = ${colors.bg-1}
+format-foreground = ${colors.bg-3}
 ; content-font = 3
 
 [module/line]
 type = custom/text
-content = |
-content-background = ${colors.bg-1}
-content-foreground = ${colors.fg-3}
+format = |
+format-background = ${colors.bg-1}
+format-foreground = ${colors.fg-3}
 ; content-font = 3
 
 
 [module/space]
 type = custom/text
-content = " "
-content-background = ${colors.bg-1}
-content-foreground = ${colors.bg-1}
+format = " "
+format-background = ${colors.bg-1}
+format-foreground = ${colors.bg-1}
 
 
 [module/left]
 type = custom/text
-content-background = ${colors.bg-3}
-content-foreground = ${colors.bg-1}
-content-font = 1
-content = ""
+format-background = ${colors.bg-3}
+format-foreground = ${colors.bg-1}
+format-font = 1
+format = ""
 
 [module/right]
 type = custom/text
-content-background = ${colors.bg-3}
-content-foreground = ${colors.bg-1}
-; content-font = 2
-content = ""
+format-background = ${colors.bg-3}
+format-foreground = ${colors.bg-1}
+; format-font = 2
+format = ""
 
 [module/rl]
 type = custom/text
-content-background = ${colors.bg-3}
-content-foreground = ${colors.bg-1}
-; content-font = 2
-content =""
+format-background = ${colors.bg-3}
+format-foreground = ${colors.bg-1}
+; format-font = 2
+format =""
 
 [module/rl-alt]
 type = custom/text
-content-background = ${colors.bg-3}
-content-foreground = ${colors.bg-1}
+format-background = ${colors.bg-3}
+format-foreground = ${colors.bg-1}
 ; content-font = 2
-content =" "
+format =" "
