--- a/config/polybar/modules/system.ini
+++ b/config/polybar/modules/system.ini
@@ -143,19 +143,32 @@ click-left = wifi toggle
 
 [module/eth]
 type = internal/network
-interface = enp2s0
-interval = 3.0
+; interface = enp2s0
+; Right now, You'll have to reload polybar when you plug the phone to share connection (but this should be fixed with https://github.com/polybar/polybar/pull/2980).
+interface = enp0s20f0u3
+unknown-as-up = true
+interval = 1.0
 
-;format-connected-underline = #55aa55
-;format-connected-prefix = " "
-format-connected-prefix-foreground = ${colors.foreground-alt}
-label-connected =  %local_ip%
+format-connected = <label-connected>
 
-format-disconnected =
-;format-disconnected = <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
-label-disconnected = %ifname% disconnected
-;label-disconnected-foreground = ${colors.foreground-alt}
+format-connected-prefix = "󰈁 "
+format-connected-prefix-underline = ${colors.cyan-2}
+format-connected-prefix-foreground = ${colors.cyan-2}
+format-connected-prefix-background = ${colors.bg-1}
+; label-connected =  %local_ip%
+label-connected = %local_ip%
+label-connected-underline = ${colors.cyan-2}
+label-connected-background = ${colors.bg-1}
+label-connected-foreground = ${colors.fg-3}
+
+format-disconnected = <label-disconnected>
+format-disconnected-prefix = "󰈂 "
+format-disconnected-prefix-foreground = ${colors.off}
+format-disconnected-prefix-background = ${colors.bg-1}
+label-disconnected = " "
+; label-disconnected = "󰈂 "
+label-disconnected-foreground = ${colors.off}
+label-disconnected-background = ${colors.bg-1}
 
 
 [module/bluetooth]
