polybar: finishing the playerctl script
This script replaces the cmus.py one : the latter one is included in the former one.

--- a/config/polybar/modules/players.ini
+++ b/config/polybar/modules/players.ini
@@ -48,3 +48,24 @@ format-prefix-foreground = ${colors.ff4500}
 format-prefix-background = ${colors.bg-1}
 
 click-left = cmus-remote -u
+
+
+[module/playerctl]
+type = custom/script
+
+exec = $HOME/.config/polybar/scripts/playerctl.py
+; exec-if = pgrep -x cmus
+interval = 1
+
+format = <label>
+label = %output%
+
+[module/playerctl-short]
+type = custom/script
+
+exec = $HOME/.config/polybar/scripts/playerctl.py 30
+; exec-if = pgrep -x cmus
+interval = 1
+
+format = <label>
+label = %output%
