--- a/config/polybar/config
+++ b/config/polybar/config
@@ -20,7 +20,7 @@
 ;
 ; Last modification : 2024.02.26
 ; Author            : Polybar, then Lasercata
-; Version           : v3.0.4
+; Version           : v3.0.5
 ;
 ; This is used in i3 (window manager)
 ; Inspired from https://github.com/Vallen217/dotfiles/tree/master/.config/polybar for v2.0.0.
@@ -36,7 +36,7 @@ include-file = $HOME/.config/polybar/modules/i3.ini
 include-file = $HOME/.config/polybar/modules/info.ini
 include-file = $HOME/.config/polybar/modules/misc.ini
 include-file = $HOME/.config/polybar/modules/system.ini
-include-file = $HOME/.config/polybar/modules/cmus.ini
+include-file = $HOME/.config/polybar/modules/players.ini
 
 
 [bar/main_bar]
@@ -69,7 +69,8 @@ font-1 = Hack Nerd Font:size=12
 ; font-1 = siji:pixelsize=11;1
 ; font-3 = FontAwesome:size=10
 
-modules-left = i3 slash space info-hackspeed space slash space cmus
+; modules-left = i3 slash space info-hackspeed space slash space cmus
+modules-left = i3 slash space info-hackspeed space slash space playerctl
 modules-center = memory space slash space filesystem space slash space cpu space slash space system-fan-speed
 modules-right = alsa space slash space network space slash eth slash bluetooth slash space battery space slash brightnessctl space slash space date space slash space time space
 
@@ -124,7 +125,8 @@ font-1 = Hack Nerd Font:size=12
 ; font-1 = siji:pixelsize=11;1
 ; font-3 = FontAwesome:size=10
 
-modules-left = i3 slash space info-hackspeed space slash space cmus-short
+; modules-left = i3 slash space info-hackspeed space slash space cmus-short
+modules-left = i3 slash space info-hackspeed space slash space playerctl-short
 modules-center = memory space slash space filesystem space slash space cpu space slash space system-fan-speed
 modules-right = alsa space slash space network-short space slash eth slash bluetooth slash space battery space slash brightnessctl space slash space date space slash space time space
 
