polybar: eth module is for ethernet, and eth-tethering is for tethering

--- a/config/polybar/config
+++ b/config/polybar/config
@@ -20,7 +20,7 @@
 ;
 ; Last modification : 2024.02.26
 ; Author            : Polybar, then Lasercata
-; Version           : v3.0.5
+; Version           : v3.0.6
 ;
 ; This is used in i3 (window manager)
 ; Inspired from https://github.com/Vallen217/dotfiles/tree/master/.config/polybar for v2.0.0.
@@ -72,7 +72,7 @@ font-1 = Hack Nerd Font:size=12
 ; modules-left = i3 slash space info-hackspeed space slash space cmus
 modules-left = i3 slash space info-hackspeed space slash space playerctl
 modules-center = memory space slash space filesystem space slash space cpu space slash space system-fan-speed
-modules-right = alsa space slash space network space slash eth slash bluetooth slash space battery space slash brightnessctl space slash space date space slash space time space
+modules-right = alsa space slash space network space slash eth-tethering slash eth slash bluetooth slash space battery space slash brightnessctl space slash space date space slash space time space
 
 tray-position = right
 tray-padding = 2
@@ -128,7 +128,7 @@ font-1 = Hack Nerd Font:size=12
 ; modules-left = i3 slash space info-hackspeed space slash space cmus-short
 modules-left = i3 slash space info-hackspeed space slash space playerctl-short
 modules-center = memory space slash space filesystem space slash space cpu space slash space system-fan-speed
-modules-right = alsa space slash space network-short space slash eth slash bluetooth slash space battery space slash brightnessctl space slash space date space slash space time space
+modules-right = alsa space slash space network-short space slash eth-tethering slash eth slash bluetooth slash space battery space slash brightnessctl space slash space date space slash space time space
 
 ; tray-position = right
 ; tray-padding = 2
