polybar: in misc.ini, using 'content' instead of 'format' (v3.6.3)

--- a/config/polybar/modules/misc.ini
+++ b/config/polybar/modules/misc.ini
@@ -1,49 +1,49 @@
 [module/slash]
 type = custom/text
-format = /
-format-background = ${colors.bg-1}
-format-foreground = ${colors.bg-3}
+content = /
+content-background = ${colors.bg-1}
+content-foreground = ${colors.bg-3}
 ; content-font = 3
 
 [module/line]
 type = custom/text
-format = |
-format-background = ${colors.bg-1}
-format-foreground = ${colors.fg-3}
+content = |
+content-background = ${colors.bg-1}
+content-foreground = ${colors.fg-3}
 ; content-font = 3
 
 
 [module/space]
 type = custom/text
-format = " "
-format-background = ${colors.bg-1}
-format-foreground = ${colors.bg-1}
+content = " "
+content-background = ${colors.bg-1}
+content-foreground = ${colors.bg-1}
 
 
 [module/left]
 type = custom/text
-format-background = ${colors.bg-3}
-format-foreground = ${colors.bg-1}
-format-font = 1
-format = ""
+content-background = ${colors.bg-3}
+content-foreground = ${colors.bg-1}
+content-font = 1
+content = ""
 
 [module/right]
 type = custom/text
-format-background = ${colors.bg-3}
-format-foreground = ${colors.bg-1}
-; format-font = 2
-format = ""
+content-background = ${colors.bg-3}
+content-foreground = ${colors.bg-1}
+; content-font = 2
+content = ""
 
 [module/rl]
 type = custom/text
-format-background = ${colors.bg-3}
-format-foreground = ${colors.bg-1}
-; format-font = 2
-format =""
+content-background = ${colors.bg-3}
+content-foreground = ${colors.bg-1}
+; content-font = 2
+content =""
 
 [module/rl-alt]
 type = custom/text
-format-background = ${colors.bg-3}
-format-foreground = ${colors.bg-1}
+content-background = ${colors.bg-3}
+content-foreground = ${colors.bg-1}
 ; content-font = 2
-format =" "
+content =" "
