--- a/config/polybar/modules/system.ini
+++ b/config/polybar/modules/system.ini
@@ -145,7 +145,8 @@ click-left = wifi toggle
 type = internal/network
 ; interface = enp2s0
 ; Right now, You'll have to reload polybar when you plug the phone to share connection (but this should be fixed with https://github.com/polybar/polybar/pull/2980).
-interface = enp0s20f0u3
+; interface = enp0s20f0u3
+interface = enx025050536135
 unknown-as-up = true
 interval = 1.0
 
