polybar: update interfaces for new computer

--- a/config/polybar/modules/system.ini
+++ b/config/polybar/modules/system.ini
@@ -72,7 +72,7 @@ format-prefix-background = ${colors.bg-1}
 
 [module/wlan]
 type = internal/network
-interface = wlp3s0
+interface = wlp0s20f3
 interval = 1
 
 format-connected = <ramp-signal><label-connected>
@@ -144,8 +144,8 @@ click-left = wifi toggle
 [module/eth-tethering]
 type = internal/network
 ; interface = enp2s0
-; Right now, You'll have to reload polybar when you plug the phone to share connection (but this should be fixed with https://github.com/polybar/polybar/pull/2980).
-interface = enp0s20f0u3
+; Right now, You'll have to reload polybar when you plug the phone sharing connection because the interface does not exists before (but this should be fixed with https://github.com/polybar/polybar/pull/2980).
+interface = enp0s20f0u5
 unknown-as-up = true
 interval = 1.0
 
