vimiv: changing scale bindings to imitate zathura

--- a/config/vimiv/keys.conf
+++ b/config/vimiv/keys.conf
@@ -54,8 +54,8 @@ p : prev
 W : scale --level=1
 <equal> : scale --level=fit
 w : scale --level=fit
-E : scale --level=fit-height
-e : scale --level=fit-width
+a : scale --level=fit-height
+s : scale --level=fit-width
 J : scroll-edge down
 H : scroll-edge left
 L : scroll-edge right
